--- a/trunk/paper/teacher_em.bib
+++ b/trunk/paper/teacher_em.bib
@@ -1,4 +1,13 @@
 
+@Book{puterman_book_94,
+  author =       {Martin L. Puterman},
+  title =        {{M}arkov Decision Processes},
+  publisher =    {Wiley-Interscience Publication},
+  year =         {1994},
+  series =       {Wiley Series in Probability and Mathematical Statistics: Applied Probability and Statistics Section},
+  address =      {New York},
+}
+
 @PhdThesis{taylor_PhD_2008,
   author = 	 {Matthew E. Taylor},
   title = 	 {Autonomous Inter-Task Transfer in Reinforcement Learning Domains},
