--- a/trunk/paper/teacher_em.bib
+++ b/trunk/paper/teacher_em.bib
@@ -139,3 +139,19 @@
   year = 	 {2005},
 }
 
+
+@InProceedings{Zhang09:Policy,
+author = {Haoqi Zhang and David Parkes and Yiling Chen},
+title = {Policy Teaching Through Reward Function Learning},
+booktitle = {Proceedings of the {ACM} Conference on Electronic Commerce 2009},
+pages = {295--3014},
+year = {2009}
+}
+
+@InProceedings{Zhang09:General,
+author = {Haoqi Zhang and Yiling Chen and David Parkes},
+title = {A General Approach to Environment Design for One Agent},
+booktitle={Proceedings of the Twenty-first International Joint Conference on Artificial Intelligence (IJCAI 2009) },
+pages = {2002--2008},
+year = {2009}
+}
